added login functionality and bottom navigation bar

--- a/blogging_app/pubspec.yaml
+++ b/blogging_app/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   image_picker_modern: ^0.4.12+2
   http: ^0.12.0+2
-  crypt: ^1.0.7
+  cached_network_image: ^0.8.0
 
 dev_dependencies:
   flutter_test:
