--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Sahil Patel",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "express": "^4.16.4",
     "mongodb": "^3.2.5",
     "mongoose": "^5.5.10",
