--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "express": "^4.16.4",
     "mongodb": "^3.2.5",
     "mongoose": "^5.5.10",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "nodemailer": "^6.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
